src/test/deca/syntax/valid/class/simple_class.deca
// Description:
//    Tests a valid program with a use of a simple class.
//
// Results:
//
//
// History:
//    created on 07/01/2025

class Object { }