src/test/deca/syntax/invalid/class/declaration/missing_open_brace_empty_11.deca
// Description:
//    Tests a syntactically incorrect program with an unopened brace for an empty class
//
// Results:
//    Line 11 : Error, unmatched brace, expected a '{'.
//
// History:
//    created on 07/01/2025

class TestClass
}